--- a/index.html
+++ b/index.html
@@ -20,20 +20,33 @@
       min-height: 100%;
     }
 
-    a {
+    .big-link {
       color: #e3e5e9;
       text-decoration: none;
       text-align: center;
       width: 100%;
-      bottom: 45px;
+      bottom: 60px;
       margin: 0 auto;
       position: fixed;
       font-size: 30px;
       font-family: Arial;
       text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.48);
     }
+    .mini-link {
+      color: #e3e5e9;
+      text-decoration: none;
+      text-align: center;
+      width: 100%;
+      bottom: 25px;
+      margin: 0 auto;
+      position: fixed;
+      font-size: 15px;
+      font-family: Arial;
+      text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.48);
+    }
   </style>
-  <a href="#">Descargar Convocatoria</a>
+  <a class="big-link" href="./files/2017-SLA-Convocatoria.pdf">Descargar Convocatoria</a>
+  <a class="mini-link" href="./files/2017-SLADeclaracion_intereses_candidatos_CPC-Documento.xlsx">Descargar formato de declaración de intereses</a>
 </body>
 
 </html>
