cambio de texto segundo link

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     }
   </style>
   <a class="big-link" href="./files/2017-SLA-Convocatoria.pdf">Descargar Convocatoria</a>
-  <a class="mini-link" href="./files/2017-SLADeclaracion_intereses_candidatos_CPC-Documento.xlsx">Descargar formato de declaración de intereses</a>
+  <a class="mini-link" href="./files/2017-SLADeclaracion_intereses_candidatos_CPC-Documento.xlsx">Descargar el formato de declaración patrimonial y de intereses.</a>
 </body>
 
 </html>
